fixed problem with overflow-y

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,6 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  overflow: hidden;
 }
 
 *,
